<resources>
    <string name="app_name">Pagina principal</string>
    <string name="Logradouro">Campo de logradouro</string>
    <string name="Bairro">Campo bairro</string>
    <string name="Complemento">Campo de Complemento </string>
    <string name="digite_o_cep_para_pesquisar">Digite o cep para pesquisar</string>
    <string name="btnPesquisar">Pesquisar</string>
    <string name="bntHistorico">Histórico</string>
    <string name="btnVoltar">Voltar</string>
    <string name="tituloCidade">Campo Cidade</string>
    <string name="resultadoCidade">Resultado do Cidade</string>
    <string name="Resultado">TextView</string>
    <string name="txtResultado2">TextView</string>
    <string name="element_text" />
    <string name="title">Campo de Logradouro</string>
    <string name="secondary_text">Resultado do Logradouro</string>
    <string name="tituloEstado">Campo de Estado</string>
    <string name="resultadoEstado">Resultado do Estado</string>
    <string name="tituloBairro">Campo Bairro</string>
    <string name="resultadoBairro">Resultado do Bairro</string>
    <string name="tituloComplemento">Campo Complemento</string>
    <string name="resultadoComplemento">Resultado do Complemento</string>
    <string name="pesquise_o_cep">Pesquise o cep</string>
</resources>